<resources>
    <string name="app_name">FootBall Score Keeper</string>
    <string name="reset">Reset</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="score">0</string>
    <string name="goal">GOAl</string>
    <string name="freekick">free kick</string>
    <string name="redcard">red card</string>
    <string name="yellowcard">yellow card</string>
    <string name="outside">outside</string>
    <string name="foul">foul</string>
    <string name="scr">score</string>
    <string name="info2">Goal = 1 Point \nRed Score = Foul \nFree Kick = 1 Point \nGreen Score = Points</string>
    <string name="info1">Outside = 1 Foul \nRed Card = 2 Foul \nYellow Card = 1 Foul</string>
</resources>
