<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/football">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:layout_marginBottom="32dp"
        android:id="@+id/we"
        android:onClick="reset"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text=" Goal = 1 Point \n Red Score = Foul \n Free Kick = 1 Point \n Green Score = Points"
        android:layout_marginLeft="5dp"
        android:textColor="#ffffff"
        android:textSize="14sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="        Outside = 1 Foul \n      Red Card = 2 Foul \n Yellow Card = 1 Foul"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:text="@string/teamA" />

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="56sp"
                    android:textColor="@color/colorscore1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/score"
                    android:id="@+id/team_a_score"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="30sp"
                    android:textColor="@color/colorscore2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/score"
                    android:id="@+id/team_a_score2"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/goal"
                android:onClick="goal"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/freekick"
                android:onClick="freeKick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/redcard"
                android:onClick="redCard"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/yellowcard"
                android:onClick="yellowCard"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/outside"
                android:onClick="outSide"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="16dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="18sp"
                android:textColor="#424242"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/teamB" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/score"
                    android:textSize="56sp"
                    android:textColor="@color/colorscore1"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/team_b_score"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/score"
                    android:textSize="30sp"
                    android:textColor="@color/colorscore2"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/team_b_score2"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/goal"
                android:onClick="goalb"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/freekick"
                android:onClick="freeKickb"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/redcard"
                android:onClick="redCardb"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/yellowcard"
                android:onClick="yellowCardb"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/outside"
                android:onClick="outSideb"/>

            </LinearLayout>
        </LinearLayout>
</RelativeLayout>

